# nouns-mech-interp

./: .gitignore  README.md  controls.ipynb  features.ipynb  pca.ipynb  pyproject.toml  sae.ipynb  test.ipynb  vae.ipynb
client/: package-lock.json  (+1 more)
swiggle/: .gitignore  analysis.py  dead_neurons.json  demo.py  dev.sh  label.py  main.py  pyproject.toml  utils.py
swiggle/api/: __init__.py  features.py  images.py
swiggle/database/: __init__.py  client.py  feature_images_bucket.py  features_table.py  images_bucket.py  types.py
swiggle/models/: __init__.py  controls.py  loss.py  sae.py  sentence.py  trainer.py  vae.py
swiggle/notebooks/: controls.ipynb  features.ipynb  random.ipynb  sae.ipynb  test.ipynb  umap.ipynb  vae.ipynb
swiggle/scripts/: add_descriptions_to_db.py  add_umap_to_db.py  create_umap_embeddings.py  create_vae_encodings.py  decode_sae_features.py  decode_sae_features.sh  jsonify_sae_features.py  jsonify_sae_features.sh  prepare_interpretability_dataset.py  prepare_interpretability_dataset.sh  run_sae_experiment.py  run_sae_experiment.sh  train_sae.py  train_sae.sh  train_vae.py
swiggle/server/: README.md  api.py  main.py  services.py
swiggle/server/database/: __init__.py  client.py  feature_images_bucket.py  features_db.py  images_db.py  utils.py
swiggle/server/features/: __init__.py  features.py
swiggle/server/tests/: test.http
swiggle/services/: __init__.py  features.py  features_service.py
swiggle/vae_interp/: controls.py  sae.py  trainer.py  vae.py
swiggle/weights/sae/: config.json  sae.pth
swiggle/weights/vae/: config.json
(+76 files in other folders)
