[tool.poetry]
name = "nouns-mech-interp"
version = "0.1.0"
description = ""
authors = ["Eric Chen <eric.chen@backflip.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.3.1"
torchvision = "^0.18.1"
matplotlib = "^3.9.1"
ipykernel = "^6.29.5"
datasets = "^2.20.0"
tensorboard = "^2.17.0"
tqdm = "^4.66.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
