[tool.poetry]
name = "swiggle"
version = "0.1.0"
description = "Decomposing the VAE latent space into interpretable features."
authors = ["Eric Chen <eric.chen@backflip.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.3.1"
torchvision = "^0.18.1"
matplotlib = "^3.9.1"
ipykernel = "^6.29.5"
datasets = "^2.20.0"
tensorboard = "^2.17.0"
tqdm = "^4.66.4"
scikit-learn = "^1.5.1"
openai = "^1.35.13"
fastapi = "^0.111.1"
supabase = "^2.5.3"
python-dotenv = "^1.0.1"
sentence-transformers = "^3.0.1"
umap-learn = "^0.5.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
